--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.6",
     "@nextui-org/react": "^2.2.9",
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "^0.0.8",
